@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}

class Organization {
  -String nome
  -String email
  -String nif
}

class Collaborator{
  -String nome
  -String email
}


class Manager {
  -String nome
  -String email
}

class User {
}

class Address {
  -String street
  -String doorNumber
  -String city
}


Platform "1" -- "1" Administrator: has >
Platform "1" -- "1..*" Organization: has registered >
Organization "1" -- "1" Address: has >
Organization "1" -- "1" Manager: has >
Organization "1" -- "1" Collaborator: has >
Collaborator "1" -- "1" User: acts as >
Manager "1" -- "1" User: acts as >
Administrator "1" -- "1" Organization: registers >
Administrator "1" -- "1" User: acts as >
Administrator "1" -- "1" Collaborator: registers >
Administrator "1" -- "1" Manager: registers >





@enduml

